<resources>
    <string name="app_name">FindMyPet</string>
    <string name="adopt_no_buy">以 認 養 代 替 購 買</string>
    <string name="dog_zone">狗 狗 專 區</string>
    <string name="cat_zone">喵 喵 專 區</string>
    <string name="other_zone">其他寵物專區</string>
    <string name="find_pet">認 養</string>
    <string name="give_pet">送 養</string>
    <string name="my_pet">我家毛孩</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
