<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chingili.findmypet.fragment.FindPetFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/horizon">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/horizon"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:text="@string/dog_zone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/saddlebrown"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_dog"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_btn"
            android:onClick="dogBtn"
            android:text="@string/dog_zone"
            android:textColor="@color/khaki"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/btn_cat"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btn_cat"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_btn"
            android:onClick="catBtn"
            android:text="@string/cat_zone"
            android:textColor="@color/khaki"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_other"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Button
            android:id="@+id/btn_other"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/style_btn"
            android:onClick="otherBtn"
            android:text="@string/other_zone"
            android:textColor="@color/khaki"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/beige"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="83dp" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:text="歡迎光臨，您好"
            android:textColor="@color/saddlebrown"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
